--- a/Reverie 19b3d25bd0cf4cdbae5b41190591175e/Study library 9372f46ccf5c4e0b8a0298d8bdfbbc76/Введение в фьючерсы 95dd52b28135437e8e5e0acc7b61637d.html
+++ b/Reverie 19b3d25bd0cf4cdbae5b41190591175e/Study library 9372f46ccf5c4e0b8a0298d8bdfbbc76/Введение в фьючерсы 95dd52b28135437e8e5e0acc7b61637d.html
@@ -666,7 +666,7 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="95dd52b2-8135-437e-8e5e-0acc7b61637d" class="page sans"><header><div class="page-header-icon undefined"><img class="icon" src="sticker_solid_(1).png"/></div><h1 class="page-title">Введение в фьючерсы</h1></header><div class="page-body"><p id="4a0f14af-d094-4554-a5b7-126d19294594" class="">
+</style></head><body><article id="95dd52b2-8135-437e-8e5e-0acc7b61637d" class="page sans"><header><div class="page-header-icon undefined"><img class="icon" src="%D0%92%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%B2%20%D1%84%D1%8C%D1%8E%D1%87%D0%B5%D1%80%D1%81%D1%8B%2095dd52b28135437e8e5e0acc7b61637d/sticker_solid_(1).png"/></div><h1 class="page-title">Введение в фьючерсы</h1></header><div class="page-body"><p id="4a0f14af-d094-4554-a5b7-126d19294594" class="">
 </p><h3 id="ecfb137c-3588-43a1-9cc3-905756fa4741" class="">Что такое фьючерсы?</h3><p id="c4f3d664-672f-4044-a969-88b12907c277" class="">Стандартизированные контракты (по качеству, количеству, сроку и месту
 поставки) на покупку и продажу финансовых инструментов или товаров с поставкой в
 будущем на регулируемой товарной фьючерсной бирже.</p><p id="b7aaa3dd-1c1b-455d-8fce-439221133d96" class="">
