--- a/Reverie 19b3d25bd0cf4cdbae5b41190591175e/Study library 9372f46ccf5c4e0b8a0298d8bdfbbc76/Маркетмейкер 2c173b1a246d434e94ce77ac7d9628d5.html
+++ b/Reverie 19b3d25bd0cf4cdbae5b41190591175e/Study library 9372f46ccf5c4e0b8a0298d8bdfbbc76/Маркетмейкер 2c173b1a246d434e94ce77ac7d9628d5.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Text</title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Маркетмейкер</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
@@ -666,43 +666,4 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="d0fff555-642c-44e4-8eb9-70d0197c315c" class="page sans"><header><h1 class="page-title">Text</h1></header><div class="page-body"><h3 id="e5f7fe30-d388-42f7-80a2-c750d8517eec" class=""><strong>Кто такие маркетмейкеры? (Определение CME Group)</strong></h3><p id="4dde8baa-5fff-41ae-b12f-5577dad7d49f" class="">Маркетмейкер является авторизованным участником рынка, которому разрешено
-выставлять двухсторонние заявки, как на покупку, так и на продажу (в то время как все
-остальные участники рынка могут открываться только в одну сторону -
-однонаправленно). Основная функция маркетмейкера заключается в обеспечении
-ликвидности на рынке (договорное соглашение с CME), обычно в обмен на снижение
-торговых сборов. Маркетмейкеры часто получают прибыль от спреда, разницы между
-ценой покупки и продажи по большому количеству транзакций.</p><p id="d203cc10-07ea-4f99-9a39-399d2fb11ccb" class="">Маркетмейкинг (на CME Group) - это централизованная компьютерная система размещения ордеров от участников рынка, имеющая общий пул из Commercial и Non- commercial счетов, которая предоставляет ликвидность на фьючерсе, одновременно набирая новые позиции (покупки и продажи) и закрывая уже имеющиеся позиции, чтобы в результате доли прибыли распределялись между каждым участником согласно установленным пропорциям.
-В связи с последним определением, под понятием «маркет-мейкер» подразумеваются все объединенные участники маркетмейкинга на CME Group. В противовес этому на рынке NASDAQ одной акцией могут заниматься не связанные друг с другом маркетмейкеры, т.к. у акций нет сроков экспирации и всегда появятся контрагенты для закрытия позиций отдельного маркетмейкера, это лишь вопрос времени.</p><p id="1fb456f1-7168-4e31-80e4-998880cdbd20" class="">Современный срочный биржевой рынок не может функционировать без такого
-профучастника как маркетмейкер, т.к. круглосуточные торги включают неликвидные
-периоды, когда происходят резкие дисбалансы в спросе и предложении, и если
-позволить рынку самостоятельно определять цены в такие периоды, то мы сможем
-наблюдать повышенную волатильность и манипулирование ценами, которые могут
-быть весьма значительными, что расценивалось бы участниками рынка как
-повышенный риск торговли, равносильно неликвидному инструменту, поэтому
-биржа, в нашем случае CME Group, заинтересована в присутствии маркетмейкеров,
-предоставляя им привелегии, взамен на соблюдение установленных обязательств по
-формированию и поддержанию ликвидности.</p><p id="7153c05e-1588-4cf9-8494-6fed829b0787" class="">
-</p><p id="88437513-db4e-4632-8273-6518d29cfb96" class=""><strong>Обязанности маркетмейкеров</strong></p><p id="19581d70-a60f-45f2-99fc-9f53fa2a2dbf" class="">В течение указанного периода торговой сессии (американская, азиатско-
-тихоокеанская, европейская) маркетмейкеры должны непрерывно выставлять и
-поддерживать двусторонние котировки по фьючерсу, соблюдая согласованные с
-биржей минимальный объем собственных заявок и спред между данными
-котировками (возможно расширение спреда котировок покупки-продажи для
-периодов повышенной волатильности).</p><p id="5319d92b-0d99-481d-b127-b9934d336a3b" class="">Выступая контрагентами большей части исполненных заявок, маркемейкеры
-занимают противоположную сторону в сделках. Другими словами, когда вы продаете,
-маркетмейкеры покупают, и наоборот.</p><p id="7de24677-9ad1-418a-83fc-6a1c7bbe3698" class=""><strong>ВАЖНО</strong>. Почему маркетмейкеры выступают контрагентами большей части заявок,
-а не всех? Остальная часть сделок может временно оказываться у других участников
-рынка, как у спекулянтов, так и у хеджеров, однако со временем все открытые позиции
-перетекают к маркетмейкерам, когда одна из сторон сделки, в которой не участвует
-маркетмейкер, решает закрыть позицию.</p><p id="ce88d71f-68db-4f3e-8f29-f463c18ae5d4" class="">
-</p><p id="8d3d25ba-62ca-40bd-bb7c-7cd0d98196e7" class=""><strong>Возможности маркетмейкеров</strong></p><p id="799b354f-b742-4a98-963d-448d90ccf811" class="">Для понимания возможностей маркетмейкеров, стоит понимать доступную
-ограниченную глубину рынка любому участнику:</p><ol type="1" id="9ce7a6a8-3dcd-4489-97b3-0a569af950f1" class="numbered-list" start="1"><li>Данные по ближайшим выставленным 10 bid и 10 ask лимитированным ордерам в виде цены и количества контрактов (Level 2).</li></ol><ol type="1" id="c7ac04ad-8af3-4763-8838-b8109445281e" class="numbered-list" start="2"><li>Данные о каждой совершенной сделке в виде цены, времени и количестве контрактов (Time &amp; Sales).</li></ol><p id="ce473fc6-aecd-4cd1-a5c4-782f87113f33" class="">
-</p><p id="3c321ea0-8894-4dee-b2b2-9f22ce2a8683" class="">Маркетмейкеры CME Group используют полную глубину рынка, доступную бирже, а
-именно:</p><p id="57a58a3f-78c9-47cb-bb3f-7da16d44bd6c" class="">1) Данные по всем существующим выставленным лимитированным ордерам
-2) Данные по всем существующим выставленным стоп ордерам
-3) Данные по открытым позициям: цена, объем, сторона сделки (buy/sell)</p><p id="e57aba00-8603-4566-bf30-ceb60c576a78" class="">
-</p><figure id="f2c16358-9bfe-41c0-84cb-b81643abdf53" class="image"><a href="%D0%92%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D0%B8%20%D0%BC%D0%B0%D1%80%D0%BA%D0%B5%D1%82%D0%BC%D0%B5%D0%B8%CC%86%D0%BA%D0%B5%D1%80%D0%B0%20(1)%20e2a756785e544547a3f388b65745def4/Screenshot_2022-08-06_at_12.24.28.png"><img style="width:1476px" src="%D0%92%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D0%B8%20%D0%BC%D0%B0%D1%80%D0%BA%D0%B5%D1%82%D0%BC%D0%B5%D0%B8%CC%86%D0%BA%D0%B5%D1%80%D0%B0%20(1)%20e2a756785e544547a3f388b65745def4/Screenshot_2022-08-06_at_12.24.28.png"/></a><figcaption>NET-Позиции (buy+sell) книги ордеров маркетмейкера (Open orders, Open positions).</figcaption></figure><p id="bff5a433-9d11-43e2-82ae-2890f2d69dd8" class="">Маркетмейкеры коллективно создают рынок по каждому фьючерсу, управляя своим общим пулом позиций централизованно, для предотвращения конфликта интересов, который возникал бы при работе по отдельности, когда вместо зарабатывания на спреде и самостоятельного выставления котировок маркетмейкеры набирали бы себе большой объем позиций, которые не имели бы контрагента для закрытия до экспирации фьючерса. (Пример: Спекулянт покупает по рынку 1 расчетный контракт и его контрагентом выступает Маркетмейкер #1, затем тот же спекулянт решает выйти из позиции и продает свой 1 контракт и его контрагентом выступает Маркетмейкер #2. В итоге спекулянт без позиции, а у маркетмейкеров 2 открытые позиции, которые закрыть они могут только друг об друга, при этом один из них будет нести потери).</p><p id="2adbc707-d41e-4a72-837d-055d4b6026b5" class=""><strong>Позиционные лимиты</strong></p><p id="c4021f87-8414-46d8-af78-67e3aaee313b" class="">Регулятор CFTC контролируют соблюдение биржевых спекулятивных лимитов, которые предотвращают аккумулирование трейдерами больших позиций, которые могут дестабилизировать рынок.</p><p id="d2276816-6905-439f-a24d-87c1fc276996" class="">
-</p><p id="4b54230a-bc49-4de7-a335-19e5b3e6a6f2" class=""><strong>Подотчетные позиции (Reportable Positions)</strong>
-Подотчетные фирмы (clearing members, futures commission merchants, foreign brokers) отправляют ежедневные отчеты комиссии CFTC, содержащие данные о позициях равных или превышающих установленные отчетные лимиты (reporting levels), где владельцы этих позиций идентифицируются как «коммерческие» (используют фьючерсные контракты для хеджирования) и «некоммерческие».</p><p id="02d20241-02ca-4376-b978-3b1310d8e617" class="">
-</p><p id="e750918b-e645-4416-bb46-848f3f40635e" class="">Так как у маркетмейкера собирается весь открытый интерес, то использование внутренней информации биржи по ОИ позволяет понимать, когда нужно набирать новые позиции, а когда закрывать имеющиеся, чтобы на последний день торгов контракта не остаться с открытыми позициями, которые не закрылись по причине отсутствия контрагентов. Поэтому если количество открытых позиций увеличивается на определенной цене, то маркетмейкер набирает и оставляет эти позиции на этой цене, если сокращается по определенной цене, то маркетмейкер закрывает равное количество своих открытых позиций по соответствующей цене, чтобы количество открытых позиций участников рынка и имеющихся у маркетмейкера было равным</p><p id="7194089c-8979-4d68-afc2-30608ed1fff7" class=""><em>(Пример : Открытых позиций на фьючерсе равно 50000 контрактов и маркетмейкер выступает по всем позициям второй стороной, когда число открытых позиций уменьшится до 49999, то маркетмейкер закроет 1 имеющуюся позицию на цене по которой произошло закрытие, но с противоположной стороной сделки).</em></p><p id="b684cba3-40d8-4410-8d31-47bf02b2cf17" class="">
-</p><p id="29b4e78c-fc88-4f20-ba1a-9efaf9c14fa4" class="">Чтобы понимать какие изменения с ОИ проиcходят внутри дня используется Locked-in Range Analysis (сокр. LRA).</p></div></article></body></html>
+</style></head><body><article id="2c173b1a-246d-434e-94ce-77ac7d9628d5" class="page sans"><header><h1 class="page-title">Маркетмейкер</h1></header><div class="page-body"></div></article></body></html>
