add psy article

--- a/Reverie 19b3d25bd0cf4cdbae5b41190591175e/Study library 9372f46ccf5c4e0b8a0298d8bdfbbc76/На что способен ММ d0fff555642c44e48eb970d0197c315c.html
+++ b/Reverie 19b3d25bd0cf4cdbae5b41190591175e/Study library 9372f46ccf5c4e0b8a0298d8bdfbbc76/На что способен ММ d0fff555642c44e48eb970d0197c315c.html
@@ -666,7 +666,7 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="d0fff555-642c-44e4-8eb9-70d0197c315c" class="page sans"><header><h1 class="page-title">На что способен ММ</h1></header><div class="page-body"><h3 id="e5f7fe30-d388-42f7-80a2-c750d8517eec" class=""><strong>Кто такие маркетмейкеры? (Определение CME Group)</strong></h3><p id="4dde8baa-5fff-41ae-b12f-5577dad7d49f" class="">Маркетмейкер является авторизованным участником рынка, которому разрешено
+</style></head><body><article id="d0fff555-642c-44e4-8eb9-70d0197c315c" class="page sans"><header><div class="page-header-icon undefined"><img class="icon" src="%D0%9D%D0%B0%20%D1%87%D1%82%D0%BE%20%D1%81%D0%BF%D0%BE%D1%81%D0%BE%D0%B1%D0%B5%D0%BD%20%D0%9C%D0%9C%20d0fff555642c44e48eb970d0197c315c/sticker_solid.png"/></div><h1 class="page-title">На что способен ММ</h1></header><div class="page-body"><h3 id="e5f7fe30-d388-42f7-80a2-c750d8517eec" class=""><strong>Кто такие маркетмейкеры? (Определение CME Group)</strong></h3><p id="4dde8baa-5fff-41ae-b12f-5577dad7d49f" class="">Маркетмейкер является авторизованным участником рынка, которому разрешено
 выставлять двухсторонние заявки, как на покупку, так и на продажу (в то время как все
 остальные участники рынка могут открываться только в одну сторону -
 однонаправленно). Основная функция маркетмейкера заключается в обеспечении
